fix on skills slideshow bottom padding/margin + changed projects slideshow from card to coverflow effect

--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -57,21 +57,14 @@
     /***** SWIPER COLORS *****/
     --swiper-navigation-color: theme("colors.neutral.50");
     --swiper-pagination-color: theme("colors.neutral.50");
+
+    /***** SWIPER NAVIGATION POSITIONING *****/
+    --swiper-navigation-sides-offset: 0px;
 }
 
 :root.dark {
     /***** SWIPER COLORS *****/
     --swiper-pagination-bullet-inactive-color: theme("colors.neutral.200");
-}
-
-.projects-swiper {
-    --swiper-navigation-sides-offset: calc(-1 * var(--space-s-m));
-    /* --swiper-pagination-bottom: calc(-1 * var(--space-m-l)); */
-}
-
-.skills-swiper {
-    --swiper-navigation-sides-offset: 0px;
-    /* --swiper-pagination-bottom: calc(-1 * var(--space-m-l)); */
 }
 
 .wavy-underline::after {
